--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.503.0",
     "motion": "^12.9.1",
     "next": "15.3.1",
+    "pocketbase": "^0.26.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0"
